# CompressedFileManager

./: .gitignore  LICENSE  README.md  README.txt
CFMCore/: Cargo.toml
CFMCore/src/: CompressManager.rs  CompressedFile.rs  CompressedFileManager.rs  PreviewedFile.rs  SingletonManager.rs  Type.rs  api_dll.rs  compress_manager.rs  compressed_file.rs  compressed_file_manager.rs  custom_type.rs  lib.rs  logger.rs  previewed_file.rs  singleton_manager.rs  utility_c.rs
CFMCore/src/CompressManager/: CompressManagerImpl.rs  ICompressManager.rs  MinizWrapperDllObj.rs
CFMCore/src/PreviewedFile/: IPreviewedFile.rs  PreviewedFileBuilder.rs  PreviewedFile_Image.rs  PreviewedFile_Unknown.rs
CFMCore/src/compress_manager/: compress_manager_impl.rs  i_compress_manager.rs  miniz_wrapper_dll_obj.rs
CFMCore/src/previewed_file/: i_previewed_file.rs  previewed_file_builder.rs  previewed_file_image.rs  previewed_file_unknown.rs
CompressedFileManager/: AssemblyInfo.cs  CFMDllWrapper.cs  CompressedFileManager.csproj  CompressedFileManager.sln  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  Test_DLL.cs
DLLTestProj/: DLLTestProj.cpp  DLLTestProj.vcxproj  DLLTestProj.vcxproj.filters
Document/: Description.txt  UML.drawio
miniz_DLL/: API.cpp  API.h  dllmain.cpp  miniz_DLL.sln  miniz_DLL.vcxproj  miniz_DLL.vcxproj.filters
testproj/: Cargo.toml  build.rs
testproj/src/: CompressedFile.rs  CompressedFileManager.rs  main.rs
