[package]
name = "CFMCore"
version = "0.1.0"
edition = "2021"

[lib]
name = "CFMCore"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
libc = "0.2"
lazy_static = "1.4"